--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,11 @@
 .App {
   font-family: 'Oswald';
   text-align: center;
-  background: rgb(157, 203, 224);
+  /* background: rgb(157, 203, 224); */
+  background: rgb(63,231,251);
+background: radial-gradient(circle, rgba(63,231,251,0.9147772082018928) 0%, rgba(86,252,70,1) 100%);
+height: 100vh;
+
   
 }
 
@@ -31,7 +35,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #1d687c;
 }
 
 @keyframes App-logo-spin {
